Updates to enable wrapper for Pega PE 7.2